NTI-10029 - fix video z-index

--- a/src/main/resources/scss/debris/_video.scss
+++ b/src/main/resources/scss/debris/_video.scss
@@ -144,10 +144,6 @@
 }
 
 .content-video-container {
-	.content-video-curtain {
-		z-index: 1;
-	}
-
 	&.playing, .no-poster {
 		.content-video-curtain {
 			display: none;
